--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/main.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
             <menu class="main-header__nav">
               <li>
                 <a href="index.html" class="main-header__logo"
-                  ><span class="logo--color">Web</span>Studio
+                  ><span class="main-header__logo__color">Web</span>Studio
                 </a>
               </li>
               <li><a href="index.html" class="main-header__submenu"> Agencja</a></li>
@@ -75,10 +75,10 @@
         </ul>
         <div class="portfolio-main__boxes container">
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/book.jpg" width="370" height="294" />
 
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -93,9 +93,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/boxes.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -110,9 +110,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/food.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -127,9 +127,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/hdphones.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -144,9 +144,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/pc.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -161,9 +161,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/proj-name.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -178,9 +178,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/sport.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -195,9 +195,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/techpic.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -212,9 +212,9 @@
             </figcaption>
           </figure>
           <figure class="portfolio-main__pictures" type="button">
-            <div class="portfolio-main__pictures--show">
+            <div class="portfolio-main__pictures__show">
               <img src="./images/writting.jpg" width="370" height="294" />
-              <div class="portfolio-main__pictures--overlay">
+              <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -235,7 +235,7 @@
       <div class="container foot-panel">
         <div>
           <a href="index.html" class="footer-bg__logo"
-            ><p class="ft-margin"><span class="logo--color">Web</span>Studio</p>
+            ><p class="ft-margin"><span class="footer-bg__logo__color">Web</span>Studio</p>
           </a>
           <address id="contact">
             <p class="footer-bg__addres">m.Warszawa, Aleje Jerozolimskie 21</p>
@@ -300,7 +300,7 @@
             <input type="email" class="footer-bg__input" placeholder="E-mail" />
             <button type="submit" class="footer-bg__send-email">
               <p>Zapisz się</p>
-              <svg class="footer-bg__send-icon" width="24" height="24">
+              <svg class="footer-bg__send-email__icon" width="24" height="24">
                 <use href="./images/form-icons.svg#icon-icon-send"></use>
               </svg>
             </button>
