--- a/portfolio.html
+++ b/portfolio.html
@@ -74,9 +74,9 @@
           </li>
         </ul>
         <div class="portfolio-main__boxes container">
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/book.jpg" width="370" height="294" />
+              <img src="./images/book.jpg" width="370" height="294" alt="technology" />
 
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
@@ -92,9 +92,9 @@
               <p>Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures" >
             <div class="portfolio-main__pictures__show">
-              <img src="./images/boxes.jpg" width="370" height="294" />
+              <img src="./images/boxes.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -109,9 +109,9 @@
               <p>Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/food.jpg" width="370" height="294" />
+              <img src="./images/food.jpg" width="370" height="294"  alt="technology"/>
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -126,9 +126,9 @@
               <p>Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures" >
             <div class="portfolio-main__pictures__show">
-              <img src="./images/hdphones.jpg" width="370" height="294" />
+              <img src="./images/hdphones.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -143,9 +143,9 @@
               <p>Marketing</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures" >
             <div class="portfolio-main__pictures__show">
-              <img src="./images/pc.jpg" width="370" height="294" />
+              <img src="./images/pc.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -160,9 +160,9 @@
               <p>Strona Internetowa</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/proj-name.jpg" width="370" height="294" />
+              <img src="./images/proj-name.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -177,9 +177,9 @@
               <p>Marketing</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/sport.jpg" width="370" height="294" />
+              <img src="./images/sport.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -194,9 +194,9 @@
               <p>Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/techpic.jpg" width="370" height="294" />
+              <img src="./images/techpic.jpg" width="370" height="294"  alt="technology"/>
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -211,9 +211,9 @@
               <p>Strona Internetowa</p>
             </figcaption>
           </figure>
-          <figure class="portfolio-main__pictures" type="button">
+          <figure class="portfolio-main__pictures">
             <div class="portfolio-main__pictures__show">
-              <img src="./images/writting.jpg" width="370" height="294" />
+              <img src="./images/writting.jpg" width="370" height="294" alt="technology" />
               <div class="portfolio-main__pictures__show__overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
@@ -299,7 +299,7 @@
           <form class="footer-bg__form">
             <input type="email" class="footer-bg__input" placeholder="E-mail" />
             <button type="submit" class="footer-bg__send-email">
-              <p>Zapisz się</p>
+              Zapisz się
               <svg class="footer-bg__send-email__icon" width="24" height="24">
                 <use href="./images/form-icons.svg#icon-icon-send"></use>
               </svg>
