--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   <svg class="form__space__icons" width="18" height="18" focusable="true">
                     <use href="./images/form-icons.svg#icon-person" class="form__icon-size"></use>
                   </svg>
-                  <label for="name">
-                    <p class="form__label-text">Imię</p>
+                  <label for="name"  class="form__label-text">
+                    Imię
                   </label>
                   <input type="text" name="name" id="name" class="form__input" />
                 </div>
@@ -87,7 +87,7 @@
                   <svg class="form__space__icons" width="18" height="18">
                     <use href="./images/form-icons.svg#icon-phone" class="form__icon-size"></use>
                   </svg>
-                  <label for="phone"> <p class="form__label-text">Telefon</p> </label>
+                  <label for="phone" class="form__label-text"> Telefon </label>
                   <input
                     type="tel"
                     name="phone"
@@ -98,8 +98,8 @@
                   <svg class="form__space__icons" width="18" height="18">
                     <use href="./images/form-icons.svg#icon-email" class="form__icon-size"></use>
                   </svg>
-                  <label for="email">
-                    <p class="form__label-text">E-mail</p>
+                  <label for="email"  class="form__label-text">
+                    E-mail
                   </label>
                   <input
                     type="email"
@@ -107,8 +107,8 @@
                     id="email"
                     class="form__input" />
                 </div>
-                <label>
-                  <p class="form__label-text">Komentarz</p>
+                <label class="form__label-text">
+                  Komentarz
                   <textarea
                     class="form__textarea"
                     placeholder="Wprowadź tekst"></textarea>
@@ -139,7 +139,7 @@
                 <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-antenna-1"
-                    widht="70"
+                    width="70"
                     height="70"></use>
                 </svg>
                 <h4 class="upper-main__title">Lorem ipsum</h4>
@@ -153,7 +153,7 @@
                 <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-clock-1"
-                    widht="70"
+                    width="70"
                     height="70"></use>
                 </svg>
                 <h4 class="upper-main__title">Lorem ipsum</h4>
@@ -166,7 +166,7 @@
                 <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-diagram-1"
-                    widht="70"
+                    width="70"
                     height="70"></use>
                 </svg>
                 <h4 class="upper-main__title">Lorem ipsum</h4>
@@ -180,7 +180,7 @@
                 <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-astronaut-1"
-                    widht="70"
+                    width="70"
                     height="70"></use>
                 </svg>
                 <h4 class="upper-main__title">Lorem ipsum</h4>
@@ -546,7 +546,7 @@
           <form class="footer-bg__form">
             <input type="email" class="footer-bg__input" placeholder="E-mail" />
             <button type="submit" class="footer-bg__send-email">
-              <p>Zapisz się</p>
+              Zapisz się
               <svg class="footer-bg__send-email__icon" width="24" height="24">
                 <use href="./images/form-icons.svg#icon-icon-send"></use>
               </svg>
